# FlaskOnlineShop

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint-celery.sh  entrypoint.sh  pyproject.toml
app/: main.py
app/alembic/: env.py
app/api/views/: cart_view.py  category_view.py  import_view.py  order_view.py  product_view.py  user_view.py
app/api/views/develop/: category_list.yml
app/api/views/security/: auth_view.py
app/core/: constants.py  extensions.py  settings.py
app/exceptions/: exceptions.py  handler.py
app/orm/alembic/: env.py
app/orm/alembic/versions/: 2021_10_19_10_42_d16dbbe02a4f_initial.py  2021_10_24_21_10_41e4d6d5a19e_added_user_email_uniqe.py  2021_10_25_14_32_ae096c3e9f95_added_lazy_load_for_categories.py  2021_10_27_18_32_153cbc41a5e9_change_category_model.py  2021_10_27_20_01_ed3c197c6837_change_category_model.py  2021_10_29_09_39_c1dae807eb76_added_uuid_to_cart1.py  2021_11_01_07_19_361e5ee8dbb3_add_index_for_cart_for_uid.py  2021_11_01_14_07_beae73892da2_update.py  2021_11_01_14_18_cfc24f602cf0_update.py  2021_11_08_07_23_20c4e84abf08_migration_message.py  2021_11_08_09_10_7be45d612409_migration_message.py  2021_11_09_12_15_1339cec3c0a7_added_role_and_scope_models.py
app/orm/models/: __init__.py  base.py
app/orm/repository/: __init__.py  base.py
app/orm/schemas/: base_schema.py  core.py
app/services/: paginator.py
app/services/security/: auth_service.py
app/worker/: main.py
app/worker/tasks/: email.py  example.py
develop/: FlaskOnlineShop.postman_collection.json
tests/: test_model_methods.py
(+36 files in other folders)
